--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,33 +1,102 @@
 .home {
-  margin-top: 10em;
-  height: 95vh;
+  margin-top: 1em;
+  height: 90vh;
   .svg-wrapper {
     height: 100%;
+    transition: height 0.15s;
+    transition-delay: 1s;
     svg {
       display: block;
       width: 100%;
       height: 100%;
       .country {
-        stroke: blue;
+        stroke: rgba(gray, 0.75);
         stroke-width: 1px;
         transition: fill 0.3s;
         &:hover {
-          stroke: black;
+          stroke: rgba(black, 0.75);
           stroke-width: 1px;
           fill: rgba(red, 0.5);
           cursor: pointer;
         }
       }
+      .label-background {
+        fill: white;
+        //transition: fill-opacity 0.3s ease-in-out;
+      }
+    }
+  }
+  .controls {
+    .year-range-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 5em;
+    }
+    input#year {
+      width: 75%;
+    }
+    .year-label {
+      font-size: 1.5em;
+      margin-left: 2em;
+    }
+    .play-btn {
+      margin-right: 2em;
+    }
+  }
+
+  .chart-wrapper {
+    //position: absolute;
+    z-index: 100;
+    background: rgba(white, 0.7);
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in-out forwards;
+    animation-delay: 1.5s;
+    .line-chart-line {
+      fill: antiquewhite;
+      fill-opacity: 0.7;
+      stroke: antiquewhite;
     }
   }
 }
+
+@keyframes fadeIn {
+  from {
+    transform: translate(0, 50%);
+    opacity: 0;
+  }
+  to {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+}
 #root {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
   height: 100vh;
   padding: 0 50px 150px;
   text-align: center;
   box-sizing: border-box;
+}
+
+body {
+  background: gray;
+}
+
+.toolTip {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  position: absolute;
+  display: none;
+  width: auto;
+  height: auto;
+  background: none repeat scroll 0 0 white;
+  border: 0 none;
+  border-radius: 8px 8px 8px 8px;
+  box-shadow: -3px 3px 15px #888888;
+  color: black;
+  font: 12px sans-serif;
+  padding: 5px;
+  text-align: center;
 }
