--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 .home {
   margin-top: 1em;
   height: 90vh;
+  font-family: 'Poppins', sans-serif;
   .svg-wrapper {
     height: 100%;
     transition: height 0.15s;
@@ -46,8 +49,7 @@
   }
 
   .chart-wrapper {
-    //position: absolute;
-    z-index: 100;
+    position: absolute;
     background: rgba(white, 0.7);
     top: 0;
     left: 0;
@@ -60,6 +62,64 @@
       fill: antiquewhite;
       fill-opacity: 0.7;
       stroke: antiquewhite;
+    }
+    #exit-btn {
+      position: absolute;
+      top: 1em;
+      right: 1em;
+      cursor: pointer;
+      font-size: 1.5em;
+    }
+  }
+
+  .croatia-extra-charts {
+    transition: 0.3s;
+    position: absolute;
+    background: rosybrown;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    .croatia-btns {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      display: flex;
+      flex-direction: column;
+      .btn {
+        display: inline-flex;
+        overflow: hidden;
+        transition: 0.3s;
+        align-items: center;
+        i,
+        span {
+          width: 100%;
+          display: block;
+          padding: 0.5rem;
+          margin: 0;
+          box-sizing: border-box;
+          flex-shrink: 0;
+          transition: margin 0.3s;
+          pointer-events: none;
+        }
+        i {
+          margin-left: -100%;
+          font-size: 1.5em;
+        }
+        &:hover {
+          color: white;
+          background-color: black;
+          i {
+            margin-left: 0;
+          }
+        }
+      }
+    }
+    #exit-btn {
+      position: absolute;
+      top: 1em;
+      right: 1em;
+      cursor: pointer;
+      font-size: 1.5em;
     }
   }
 }
@@ -76,7 +136,6 @@
 }
 #root {
   height: 100vh;
-  padding: 0 50px 150px;
   text-align: center;
   box-sizing: border-box;
 }
