--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -85,18 +85,19 @@ body {
     }
     #exit-btn {
       position: absolute;
-      top: 1em;
-      right: 1em;
+      top: 0;
+      right: 0;
       cursor: pointer;
       font-size: 1.5em;
       font-weight: 500;
+      padding: 1em;
       transition: 0.3s;
       &:hover {
         color: $select_color;
       }
     }
     svg {
-      margin-top: 5em;
+      margin-top: 3.5em;
     }
     .btn-months {
       position: absolute;
@@ -112,6 +113,32 @@ body {
       &:hover {
         background: $select_color;
         color: $white;
+      }
+    }
+    .tourist-on-citizen {
+      display: flex;
+      position: relative;
+      bottom: 2em;
+      left: 0.5em;
+      width: 50%;
+      .people-icons {
+        display: flex;
+        position: relative;
+        height: 2.5em;
+        overflow: hidden;
+      }
+      i {
+        font-size: 20px;
+        margin-right: 4px;
+      }
+      .info {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        margin-left: 1em;
+        span {
+          height: 40px;
+        }
       }
     }
   }
